--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ body {
 /*Header section*/
 
 header{
-	background-color: black;
+	background-color: blue;
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -60,7 +60,7 @@ p.caption{
 /*Footer section*/
 
 footer{
-	background-color: black;
+	background-color: blue;
 	text-align: center;
 	padding: 50px;
 }
