--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,17 @@
 body {
 	margin: 0;
-	font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
+	font-family: 'League Spartan', sans-serif;
 	font-size: 20px;
 	line-height: 30px;
 }
+
 /*Header section*/
 
 header{
-	background: #1C658C;
+	background-color: black;
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
-
 }
 
 header h1{
@@ -27,17 +27,15 @@ header img{
 
 /*Main section*/
 main{
-	background: #EEEEEE;
+	max-width: 800px;
 	margin: 0 auto;
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding: 0 20px;
 }
 
 main img{
-	margin-left:auto;
-	margin-right:auto;
-	display:block;
-	
+	max-width: 100%;
+}
+
 main h2{
 	font-size: 30px;
 	margin: 40px 0 10px;
@@ -58,6 +56,7 @@ p.caption{
 	font-style: italic;
 	font-size: 20px;
 }
+
 /*Footer section*/
 
 footer{
@@ -79,5 +78,4 @@ footer a{
 footer a:hover{
 	background-color: white;
 	color: black;
-}
 }
