--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ body {
 /*Header section*/
 
 header{
-	background-color: black;
+	background-color: #1C658C;
 	text-align: center;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -33,7 +33,7 @@ main{
 }
 
 main img{
-	max-width: 100%;
+	max-width: 50%;
 }
 
 main h2{
@@ -60,7 +60,7 @@ p.caption{
 /*Footer section*/
 
 footer{
-	background-color: black;
+	background-color: #1C658C;
 	text-align: center;
 	padding: 50px;
 }
